# plugin-screen-recorder

./: .gitignore  Cargo.toml  HANDOFF.md  Makefile  README.md  plugin.toml  qol-config.toml  run.sh
.github/workflows/: labels.yml  lint.yml  release.yml  tests.yml  version.yml
src/: main.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
ui/: app.js  index.html  style.css
