[package]
name = "screen-recorder"
version = "1.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
qol-tray = { git = "https://github.com/qol-tools/qol-tray" }
toml = "0.9.8"

[patch."https://github.com/qol-tools/qol-runtime"]
qol-runtime = { path = "../qol-runtime" }

[patch."https://github.com/qol-tools/qol-plugin-api"]
qol-plugin-api = { path = "../qol-plugin-api" }

[patch."https://github.com/qol-tools/qol-tray"]
qol-tray = { path = "../qol-tray" }
